# PHM_Mini

./: .env.example  .gitignore  AUDIT_REPORT.md  DEPLOYMENT.md  README.md  calibrate.py  install.sh  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_ubuntu.sh
blackbox/: fault_0000_motor_0_esc_thermal_fault_1781234362.json  fault_0001_motor_1_esc_thermal_fault_1781234362.json  fault_0002_motor_2_esc_thermal_fault_1781234362.json  fault_0003_motor_3_esc_thermal_fault_1781234362.json  fault_0004_motor_0_current_imbalance_1781234379.json  fault_0005_motor_1_current_imbalance_1781234379.json  fault_0006_motor_2_current_imbalance_1781234379.json  fault_0007_motor_3_current_imbalance_1781234379.json  fault_0008_motor_0_esc_thermal_fault_1781234382.json  fault_0009_motor_1_esc_thermal_fault_1781234382.json  fault_0010_motor_2_esc_thermal_fault_1781234382.json  fault_0011_motor_3_esc_thermal_fault_1781234383.json  fault_0012_motor_0_current_imbalance_1781234384.json  fault_0013_motor_1_current_imbalance_1781234384.json  fault_0014_motor_2_current_imbalance_1781234384.json  fault_0015_motor_3_current_imbalance_1781234384.json  fault_0016_motor_0_esc_thermal_fault_1781234386.json  fault_0017_motor_1_esc_thermal_fault_1781234386.json  fault_0018_motor_2_esc_thermal_fault_1781234386.json  fault_0019_motor_3_esc_thermal_fault_1781234386.json  fault_0020_battery_over_temp_1781234396.json  fault_0021_motor_0_current_imbalance_1781234396.json  fault_0022_motor_1_current_imbalance_1781234396.json  fault_0023_motor_2_current_imbalance_1781234396.json  (+112 more)
(+46 files in other folders)
