[project]
name = "drone-fault-monitor"
version = "0.2.0"
description = "UAV PHM Monitor — Raspberry Pi deployment-ready with multithread architecture"
requires-python = ">=3.11"
dependencies = [
    "smbus2>=0.4.3",
    "PyYAML>=6.0",
    "Flask>=3.0.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "setuav-pythrust>=0.1.0",
    "gpiozero>=2.0; sys_platform == 'linux'",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
